			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05c: *********************************

BUG: (11/21/06, SMR) Electrical layers for TSMC180 transistors is wrong.
FIX: In MoCMOS.resizeNodes(), fix poly overhang calculation.

BUG: (11/21/06, SMR) Auto-router will not connect touching primitives that
     do not line-up.
FIX: In AutoStitch.comparePoly(), test for line-up only if one node is a cell.

IMP: (11/21/06, SMR) Added new functions to polygon merge.

BUG: (11/21/06, SMR) Wiring fails some L-shaped situations.
FIX: In SimpleWirer.planRoute(), treat ArcProto.getAngleIncrement() as degrees,
     not tenths-of-a-degree.

IMP/MAN: (11/20/06, SMR) Extractor now has options to unify Active and control minimum
     polygon size.

BUG: (11/16/06, SMR) Slow startup.
FIX: In Technology.initAllTechnologies(), batch Preference changes.

BUG: (11/15/06, GVG) Extension not added to hspice netlists (bug #1259)
FIX: Mistake was introduced while cleaning the code.

BUG: (11/14/06, DN) Check library throws assertion on directed and negated arcs.
FIX: In ArcInst.check use "getShape" instead of "makeGridPoly". 

BUG: (11/14/06, DN) Arc name "a," was considered valid.
FIX: In Name.checkNameThrow more thorough test for empty subnames.

IMP: (11/14/06, GVG) Well arcs added in TSMC180.

IMP: (11/14/06, GVG) Adding corner butted well contacts in TSMC180.

IMP: (11/14/06, DN) All library writers (ELIB, ReadableDump) work on immutable objects only.
    ImmutbaleArcInst.gridLength removed. Null elements in Variables are forbidden.

BUG: (11/10/06, GVG) DRC exclusion regions not working hierarchically (bug#1257)
FIX: Check exclusion at the layer level instead of geometry level or report level.
Note: it could slow down the code.

IMP: (11/8/06, GVG) Adding corner butted active contacts in TSMC180

BUG/TEC: (11/8/06, SMR) Auto-stitching serpentine transistors fails.